# CLPipeline

./: .gitignore  LICENSE  README.md  firecrown_enviroment.yml  firecrown_environment.yml  firecrown_pipeline.py  nersc_in2p3.md  pyproject.toml  test_script.sh  test_script_notxpipe.sh  txpipe_enviroment.yml  txpipe_environment.yml  txpipe_environment_perlmutter.yml
.github/ci/: environment-fast.yml
.github/workflows/: ci.yml
cl_theory_test/: CLMM_profile_vs_CLPred.ipynb  cosmodc2.sacc  deltasigma_profile_test_ccl.fits  deltasigma_profile_test_nc.sacc  ncount_rich.fits  redmapper_vs_CosmoPipeline.ipynb  selection_function_Test.ipynb
cl_theory_test/.ipynb_checkpoints/: CLMM_profile_vs_CLPred-checkpoint.ipynb  generate_sample-checkpoint.py
cl_theory_test/NC_data_shear_test/: cluster.py  plot_samples_permanen.ipynb
cl_theory_test/Red_data_test/: cluster_richness_values.ini
cl_theory_test/Red_selection_test/: plot_samples.ipynb
cl_theory_test/theory_test/: CLMM_profile_vs_CLPred.ipynb  deltasigma_profile_test.sacc  deltasigma_profile_test_ccl.fits  generate_sample.py  (+2 more)
clpipeline/: .ceci_types.py.swp  __init__.py  __main__.py  ceci_types.py  cluster_theory_pred.py  file_types.py  firecrown_pipeline.py  test2.py  tjpcov_pipeline.py  txpipe_pipeline.py
docs/: firecrown_stage.txt  tjpcov_pipeline.txt
examples/: plot_samples.ipynb  prediction_test.ipynb
firecrown_inputs/: cluster_redshift_richness.py
tests/: CL_test_concat.yml  CL_test_txpipe_concat.yml  config.yml  conftest.py  test_firecrown_pipeline.py  test_tjpcov_pipeline.py
tutorials/: README.md
(+1131 files in other folders)
